--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,10 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="navigation_drawer_size">240dp</dimen>
+
+    <dimen name="your_current_amount_text_size">17sp</dimen>
+    <dimen name="amount_text_size">20sp</dimen>
+
+    <dimen name="operation_icon_size">20dp</dimen>
+    <dimen name="small_margin">10dp</dimen>
 </resources>
