--- a/app/src/main/res/values/strings_activity_settings.xml
+++ b/app/src/main/res/values/strings_activity_settings.xml
@@ -6,7 +6,7 @@
     <!-- Example General settings -->
     <string name="pref_header_sms_parsing">SMS parsing</string>
 
-    <string name="pref_title_enable_parsing">Enable SMS parsing</string>
+    <string name="pref_title_enable_parsing">Enable auto SMS parsing</string>
     <string name="pref_description_enable_parsing">Recommended for auto filling statistics</string>
 
     <string name="pref_title_phone_number">Phone number for parsing</string>
