--- a/app/src/main/res/values/strings_fragment_main.xml
+++ b/app/src/main/res/values/strings_fragment_main.xml
@@ -3,4 +3,5 @@
 
     <!-- Strings related to MainFragment -->
     <string name="your_current_amount">Your current amount</string>
+    <string name="add_tag">Add Tag</string>
 </resources>
