--- a/app/src/main/res/layout/operation_list_content.xml
+++ b/app/src/main/res/layout/operation_list_content.xml
@@ -1,9 +1,9 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:orientation="vertical"
-             tools:context="by.vfedorenko.budgetwatcher.fragments.MainFragment">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,5 +36,4 @@
             android:layout_alignParentTop="true"/>
 
     </android.support.v4.widget.SwipeRefreshLayout>
-
 </LinearLayout>
