--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,8 +2,8 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".MainActivity">
-      <item android:id="@+id/action_sync_network"
-            android:title="@string/action_sync_network"
-            android:orderInCategory="100"
-            app:showAsAction="never"/>
+      <item android:id="@+id/action_save"
+            android:title="@string/action_save_to_drive"/>
+      <item android:id="@+id/action_load"
+            android:title="@string/action_load_from_drive" />
 </menu>
